k8s/twelve_services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: twelvecloudbs
    app.kubernetes.io/name: twelvecloudbs
  name: twelvecloudbs
  namespace: default

spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: twelvecloudbs
    app.kubernetes.io/name: twelvecloudbs
