k8s/twelve_services_lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: twelvecloudbs
    app.kubernetes.io/name: twelvecloudbs
  name: twelvecloudbs
  namespace: default

spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  sessionAffinity: ClientIP
  ports:
  - name: http
    nodePort: 32167
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: twelvecloudbs
    app.kubernetes.io/name: twelvecloudbs
  type: LoadBalancer
