k8s/twelve_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: top.nablanalytics.com
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
    namespace: default

spec:
  tls:
  - hosts:
    - top.nablanalytics.com
    secretName: top-nablanalytics-tls
  
  ingressClassName: nginx
  rules:
    - host: top.nablanalytics.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: twelvecloudbs
                port:
                  number: 80
            path: /
